tests: remove commons-io dep., allow local bfs-irixbroker.properties and exchange outdated report